<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">
    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:fontFamily="@font/andada"
        android:text=""
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/all"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/user"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/andada"
        android:text="@string/All"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <Button
        android:id="@+id/my"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/all"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/andada"
        android:text="@string/My"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all" />
    <Button
        android:id="@+id/add"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/my"
        android:backgroundTint="@color/main"
        android:fontFamily="@font/andada"
        android:text="@string/Add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my" />

</androidx.constraintlayout.widget.ConstraintLayout>