<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">
    <TextView
        android:id="@+id/loginscrn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:fontFamily="@font/andada"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />
    <EditText
        android:id="@+id/username"
        android:layout_width="243dp"
        android:layout_height="74dp"
        android:layout_below="@id/loginscrn"
        android:backgroundTint="@color/main"
        android:ems="10"
        android:fontFamily="@font/andada"
        android:hint="Username"
        android:textColor="@color/main"
        android:textColorHint="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginscrn" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="243dp"
        android:layout_height="74dp"
        android:layout_below="@id/username"
        android:backgroundTint="@color/main"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/main"
        android:textColorHint="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="243dp"
        android:layout_height="62dp"
        android:layout_below="@id/email_login"
        android:backgroundTint="@color/main"
        android:ems="10"
        android:hint="@string/Password"
        android:textColorHint="@color/main"
        android:inputType="textPassword"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_login"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/main"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        android:fontFamily="@font/andada"/>

    <TextView
        android:id="@+id/register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:gravity="center"
        android:text="@string/Register"
        android:textColor="@color/main"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        tools:layout_editor_absoluteX="16dp"
        android:fontFamily="@font/andada"/>

</androidx.constraintlayout.widget.ConstraintLayout>